@@ -36,6 +36,7 @@
   [#22643] math.h c99 incompability
   [#22666] io90pwm3b.h errors
   [#22785] ATMega644P Support Missing from avr/include/avr/sleep.h
+  [#22828] eeprom_write_block(): incompatibility in args order
 
 
 * Other changes:
